feat: enable Mock Service Worker (MSW) for API mocking during development and testing
- Added MSW_ENABLED flag in env.ts to control MSW activation.
- Updated main.ts to start MSW worker if MSW_ENABLED is true.
- Refactored envelope-related ports to use IEnvelopeQueriesPort and IEnvelopeMutationsPort.
- Removed deprecated IEnvelopeQueryPort and IEnvelopeServicePort interfaces.
- Implemented FetchHttpClient for HTTP requests with authorization support.
- Created handlers for envelope-related API endpoints in MSW.
- Added tests for FetchHttpClient and envelope ports to ensure correct behavior with MSW.
- Updated TypeScript configuration to include MSW types.

--- a/angular.json
+++ b/angular.json
@@ -24,6 +24,11 @@
               {
                 "glob": "**/*",
                 "input": "public"
+              },
+              {
+                "glob": "mockServiceWorker.js",
+                "input": "node_modules/msw/browser",
+                "output": "/"
               }
             ],
             "styles": ["src/styles.scss"]
@@ -74,13 +79,18 @@
             "karmaConfig": "karma.conf.js",
             "codeCoverage": true,
             "inlineStyleLanguage": "scss",
+            "polyfills": ["src/test-setup.ts"],
             "assets": [
               {
                 "glob": "**/*",
                 "input": "public"
+              },
+              {
+                "glob": "mockServiceWorker.js",
+                "input": "node_modules/msw/browser",
+                "output": "/"
               }
-            ],
-            "styles": ["src/styles.scss"]
+            ]
           }
         }
       }
