feat: integrate Storybook and add design system components
- Added Storybook configuration and preview setup for the design system.
- Created global styles and tokens for consistent theming.
- Implemented `os-button`, `os-field`, and `os-input` components with corresponding stories.
- Enhanced accessibility with Storybook addons for a11y and interactions.
- Defined color and spacing tokens for design consistency across components.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "test:ci": "ng test --watch=false --browsers=ChromeHeadless"
+    "test:ci": "ng test --watch=false --browsers=ChromeHeadless",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build",
+    "cem": "cem analyze --globs 'src/ds/**/*.ts' --outdir . --litelement false"
   },
   "prettier": {
     "printWidth": 100,
@@ -38,6 +41,12 @@
     "@angular/cli": "^20.2.0",
     "@angular/compiler-cli": "^20.2.0",
     "@types/jasmine": "~5.1.0",
+    "@storybook/addon-a11y": "^8.3.0",
+    "@storybook/addon-essentials": "^8.3.0",
+    "@storybook/addon-interactions": "^8.3.0",
+    "@storybook/test": "^8.3.0",
+    "@storybook/web-components-vite": "^8.3.0",
+    "@custom-elements-manifest/analyzer": "^0.10.4",
     "jasmine-core": "~5.9.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
@@ -45,6 +54,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "msw": "^2.11.1",
+    "storybook": "^8.3.0",
     "typescript": "~5.9.2"
   },
   "msw": {
