feat: update component paths and add new components
- Updated the path for the `cem` command in package.json to reflect the new directory structure.
- Added new components: `os-account-picker`, `os-alert`, `os-appbar`, `os-badge`, `os-budget-picker`, `os-card`, `os-empty`, `os-envelope-item`, `os-goal-progress`, `os-list`, `os-modal`, `os-select`, `os-spinner`, `os-sync-status`, `os-toast`, `os-transaction-item`, and `os-user-avatar`.
- Created stories for each new component in Storybook.
- Implemented basic functionality and styling for each component.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test:ci": "ng test --watch=false --browsers=ChromeHeadless",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "cem": "cem analyze --globs 'src/ds/**/*.ts' --outdir . --litelement false"
+    "cem": "cem analyze --globs 'src/app/ds/**/*.ts' --outdir . --litelement false"
   },
   "prettier": {
     "printWidth": 100,
