--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
       "@adapters/*": ["adapters/*"],
       "@app/*": ["app/*"],
       "@application/*": ["application/*"],
+      "@either": ["shared/core"],
       "@infra/*": ["infra/*"],
       "@models/*": ["models/*"],
     }
