feat: adicionar suporte para o diretório de DTOs no tsconfig.json
- Incluída a referência ao diretório "@dtos/*" no arquivo tsconfig.json, permitindo a organização e importação adequada dos Data Transfer Objects no projeto.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
       "@adapters/*": ["adapters/*"],
       "@app/*": ["app/*"],
       "@application/*": ["application/*"],
+      "@dtos/*": ["dtos/*"],
       "@either": ["shared/core"],
       "@infra/*": ["infra/*"],
     }
