feat: atualizar configuração do projeto para suporte a ESLint e variáveis de ambiente
- Adicionadas configurações de ESLint ao projeto, incluindo a instalação de pacotes necessários e a atualização do arquivo angular.json para suportar diferentes ambientes (dev, prod, test).
- Implementados aliases de caminho no tsconfig.json para facilitar a estruturação do código.
- Atualizados testes para utilizar 'unknown' em vez de 'any', melhorando a conformidade com as regras do ESLint.
- Documentação atualizada para refletir as mudanças na configuração e no uso de ferramentas.

Refs: OS-27

--- a/angular.json
+++ b/angular.json
@@ -26,10 +26,14 @@
                 "input": "public"
               }
             ],
-            "styles": [
-              "src/styles.scss"
-            ],
-            "outputMode": "static"
+            "styles": ["src/styles.scss"],
+            "outputMode": "static",
+            "fileReplacements": [
+              {
+                "replace": "src/environments/environment.ts",
+                "with": "src/environments/environment.prod.ts"
+              }
+            ]
           },
           "configurations": {
             "production": {
@@ -51,6 +55,14 @@
               "optimization": false,
               "extractLicenses": false,
               "sourceMap": true
+            },
+            "test": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.test.ts"
+                }
+              ]
             }
           },
           "defaultConfiguration": "production"
@@ -81,15 +93,20 @@
                 "input": "public"
               }
             ],
-            "styles": [
-              "src/styles.scss"
-            ]
+            "styles": ["src/styles.scss"]
+          }
+        },
+        "lint": {
+          "builder": "@angular-eslint/builder:lint",
+          "options": {
+            "lintFilePatterns": ["src/**/*.ts", "src/**/*.html"]
           }
         }
       }
     }
   },
   "cli": {
-    "analytics": false
+    "analytics": false,
+    "schematicCollections": ["angular-eslint"]
   }
 }
