--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,14 @@
     "baseUrl": "./src",
     "paths": {
       "@app/*": ["app/*"],
-      "@either": ["shared/core"],
+      "@core/*": ["app/core/*"],
+      "@shared/*": ["app/shared/*"],
+      "@features/*": ["app/features/*"],
+      "@layouts/*": ["app/layouts/*"],
+      "@dtos/*": ["app/dtos/*"],
+      "@services/*": ["app/services/*"],
+      "@mocks/*": ["mocks/*"],
+      "@either": ["shared/core"]
     }
   },
   "angularCompilerOptions": {
