feat: atualizar configuração do ESLint e refatorar estrutura de diretórios
- Ajustadas as configurações do ESLint para utilizar aspas simples e prefixos adequados em componentes Angular.
- Atualizado o arquivo tsconfig.json para incluir um novo alias de caminho `@environments` e removido o alias obsoleto `@either`.
- Criada a estrutura de diretórios Feature-Based, organizando os arquivos em `core`, `shared`, `features`, `layouts`, `dtos`, `services` e `mocks`.
- Removidos arquivos e diretórios não utilizados, como `either.ts` e `index.ts`, para simplificar a base de código.

Refs: OS-27

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,7 @@
       "@dtos/*": ["app/dtos/*"],
       "@services/*": ["app/services/*"],
       "@mocks/*": ["mocks/*"],
-      "@either": ["shared/core"]
+      "@environments/*": ["environments/*"]
     }
   },
   "angularCompilerOptions": {
