Atualiza as dependências do projeto, incluindo ESLint e plugins do Angular, e adiciona novos scripts para build e lint no package.json. Modifica o tsconfig.json para incluir novos aliases de caminho e atualiza a documentação do plano de implementação para refletir o progresso nas configurações de ferramentas e dependências. Essa atualização melhora a organização do código e a usabilidade das ferramentas de desenvolvimento.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,11 @@
     "baseUrl": "./src",
     "paths": {
       "@app/*": ["app/*"],
-      "@either": ["shared/core"],
+      "@core/*": ["app/core/*"],
+      "@shared/*": ["app/shared/*"],
+      "@features/*": ["app/features/*"],
+      "@dtos/*": ["dtos/*"],
+      "@either": ["shared/core"]
     }
   },
   "angularCompilerOptions": {
