--- a/package.json
+++ b/package.json
@@ -40,18 +40,13 @@
     "tslib": "^2.3.0"
   },
   "devDependencies": {
-    "@angular-eslint/builder": "^20.3.0",
-    "@angular-eslint/eslint-plugin": "^20.3.0",
-    "@angular-eslint/eslint-plugin-template": "^20.3.0",
-    "@angular-eslint/schematics": "^20.3.0",
     "@angular/build": "^20.2.0",
     "@angular/cli": "^20.2.0",
     "@angular/compiler-cli": "^20.2.0",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^20.17.19",
-    "@typescript-eslint/eslint-plugin": "^8.46.0",
-    "@typescript-eslint/parser": "^8.46.0",
-    "eslint": "^9.37.0",
+    "angular-eslint": "20.3.0",
+    "eslint": "^9.35.0",
     "eslint-plugin-boundaries": "^5.0.2",
     "jasmine-core": "~5.9.0",
     "karma": "~6.4.0",
@@ -59,6 +54,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.9.2"
+    "typescript": "~5.9.2",
+    "typescript-eslint": "8.40.0"
   }
 }
