Atualiza o arquivo angular.json para incluir configurações de environments para desenvolvimento, produção e testes, além de ajustes nos scripts de linting no package.json. A documentação do plano e do log de trabalho foi atualizada para refletir o progresso nas tarefas relacionadas à estrutura Feature-Based e configuração de environments. Essas mudanças melhoram a organização do projeto e a clareza das instruções.

--- a/angular.json
+++ b/angular.json
@@ -26,13 +26,17 @@
                 "input": "public"
               }
             ],
-            "styles": [
-              "src/styles.scss"
-            ],
+            "styles": ["src/styles.scss"],
             "outputMode": "static"
           },
           "configurations": {
             "production": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.prod.ts"
+                }
+              ],
               "budgets": [
                 {
                   "type": "initial",
@@ -51,6 +55,17 @@
               "optimization": false,
               "extractLicenses": false,
               "sourceMap": true
+            },
+            "test": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.test.ts"
+                }
+              ],
+              "optimization": false,
+              "extractLicenses": false,
+              "sourceMap": true
             }
           },
           "defaultConfiguration": "production"
@@ -63,6 +78,9 @@
             },
             "development": {
               "buildTarget": "orca-sonhos-front:build:development"
+            },
+            "test": {
+              "buildTarget": "orca-sonhos-front:build:test"
             }
           },
           "defaultConfiguration": "development"
@@ -81,18 +99,13 @@
                 "input": "public"
               }
             ],
-            "styles": [
-              "src/styles.scss"
-            ]
+            "styles": ["src/styles.scss"]
           }
         },
         "lint": {
           "builder": "@angular-eslint/builder:lint",
           "options": {
-            "lintFilePatterns": [
-              "src/**/*.ts",
-              "src/**/*.html"
-            ]
+            "lintFilePatterns": ["src/**/*.ts", "src/**/*.html"]
           }
         }
       }
@@ -100,8 +113,6 @@
   },
   "cli": {
     "analytics": false,
-    "schematicCollections": [
-      "angular-eslint"
-    ]
+    "schematicCollections": ["angular-eslint"]
   }
 }
