--- a/package.json
+++ b/package.json
@@ -35,10 +35,12 @@
     "@angular/common": "^20.2.0",
     "@angular/compiler": "^20.2.0",
     "@angular/core": "^20.2.0",
+    "@angular/fire": "^20.0.1",
     "@angular/forms": "^20.2.0",
     "@angular/material": "^20.2.3",
     "@angular/platform-browser": "^20.2.0",
     "@angular/router": "^20.2.0",
+    "firebase": "^11.10.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
@@ -61,6 +63,7 @@
     "eslint-plugin-storybook": "^9.1.10",
     "jasmine-core": "~5.9.0",
     "jsdom": "^27.0.0",
+    "msw": "^2.11.5",
     "storybook": "^9.1.10",
     "typescript": "~5.9.2",
     "typescript-eslint": "8.40.0",
