Adiciona configuração do Mock Service Worker (MSW) e novos handlers para a API de orçamento. O arquivo `proxy.conf.json` foi criado para redirecionar requisições para o servidor local, e o `mockServiceWorker.js` foi adicionado para interceptar requisições. O `package.json` foi atualizado para incluir a configuração do MSW. Além disso, foram feitas alterações nos serviços e interceptors para utilizar a nova estrutura de endpoints da API, substituindo 'budgets' por 'budget' em várias partes do código. A documentação foi atualizada para refletir essas mudanças.

--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
       }
     ]
   },
+  "msw": {
+    "workerDirectory": "public"
+  },
   "private": true,
   "dependencies": {
     "@angular/cdk": "^20.2.3",
