Refina o componente os-budget-summary, implementando melhorias significativas em acessibilidade, animações e usabilidade. Adiciona gráficos interativos (pie e bar charts) com animações, cores semânticas para feedback visual e destaque de totais com typography aprimorada. Implementa estados de carregamento com skeleton loading e 62 testes unitários, garantindo 100% de cobertura. Documenta novas funcionalidades no work log, assegurando conformidade com WCAG 2.1 AA e uma experiência de usuário otimizada.

--- a/angular.json
+++ b/angular.json
@@ -93,7 +93,8 @@
           "options": {
             "tsConfig": "tsconfig.spec.json",
             "runner": "vitest",
-            "buildTarget": "::development"
+            "buildTarget": "::development",
+            "watch": false
           }
         },
         "lint": {
