--- a/package.json
+++ b/package.json
@@ -9,9 +9,8 @@
     "build:prod": "ng build --configuration production",
     "build:test": "ng build --configuration test",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test --watch=false",
-    "test:watch": "ng test",
-    "test:coverage": "ng test --code-coverage --watch=false",
+    "test": "ng test",
+    "test:coverage": "ng test --code-coverage",
     "lint": "ng lint",
     "lint:fix": "ng lint --fix",
     "storybook": "ng run orca-sonhos-front:storybook",
