--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "lint": "ng lint",
     "lint:fix": "ng lint --fix",
     "storybook": "ng run orca-sonhos-front:storybook",
-    "build-storybook": "ng run orca-sonhos-front:build-storybook"
+    "build-storybook": "ng run orca-sonhos-front:build-storybook",
+    "docs:json": "npx @compodoc/compodoc -p .storybook/tsconfig.doc.json -e json -d . --disableSourceCode --disableGraph --disableCoverage --disablePrivate --disableInternal --disableLifeCycleHooks --disableRoutesGraph --disableSearch --disableTemplateTab --disableStyleTab",
+    "docs:clean": "rm -f documentation.json"
   },
   "prettier": {
     "printWidth": 100,
