--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
     "@angular/material": "^20.2.3",
     "@angular/platform-browser": "^20.2.0",
     "@angular/router": "^20.2.0",
+    "chart.js": "^4.5.1",
     "firebase": "^11.10.0",
+    "ng2-charts": "^8.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
