feat: Adicionar novos scripts de deploy e configuração do Firebase no package.json
- Incluídos scripts para facilitar o processo de deploy, incluindo `deploy`, `deploy:hosting` e `firebase:init`.
- Atualizada a configuração do ambiente de produção para permitir o bypass de autenticação.

Essas alterações visam simplificar o fluxo de trabalho de implantação e melhorar a configuração do ambiente de produção.

--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "storybook": "ng run orca-sonhos-front:storybook",
     "build-storybook": "ng run orca-sonhos-front:build-storybook",
     "docs:json": "npx @compodoc/compodoc -p .storybook/tsconfig.doc.json -e json -d . --disableSourceCode --disableGraph --disableCoverage --disablePrivate --disableInternal --disableLifeCycleHooks --disableRoutesGraph --disableSearch --disableTemplateTab --disableStyleTab",
-    "docs:clean": "rm -f documentation.json"
+    "docs:clean": "rm -f documentation.json",
+    "deploy": "npm run build:prod && firebase deploy",
+    "deploy:hosting": "npm run build:prod && firebase deploy --only hosting",
+    "firebase:init": "firebase login && firebase init hosting"
   },
   "prettier": {
     "printWidth": 100,
