--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "test:coverage": "ng test --code-coverage",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:headed": "playwright test --headed",
+    "test:e2e:debug": "playwright test --debug",
     "lint": "ng lint",
     "lint:fix": "ng lint --fix",
     "storybook": "ng run orca-sonhos-front:storybook",
@@ -58,6 +62,7 @@
     "@angular/cli": "^21.0.3",
     "@angular/compiler-cli": "^21.0.5",
     "@compodoc/compodoc": "^1.1.31",
+    "@playwright/test": "^1.57.0",
     "@storybook/addon-a11y": "^9.1.10",
     "@storybook/addon-docs": "^9.1.10",
     "@storybook/addon-onboarding": "^9.1.10",
