--- a/angular.json
+++ b/angular.json
@@ -93,7 +93,10 @@
           "options": {
             "tsConfig": "tsconfig.spec.json",
             "runner": "vitest",
+            "runnerConfig": true,
             "buildTarget": "::development",
+            "include": ["**/*.spec.ts"],
+            "exclude": ["**/*.e2e.spec.ts", "src/environments/environment.test.ts"],
             "watch": false
           }
         },
