--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -7,5 +7,5 @@
     "types": ["jasmine"]
   },
   "include": ["src/**/*.ts"],
-  "exclude": ["src/environments/environment.test.ts"]
+  "exclude": ["src/environments/environment.test.ts", "**/*.e2e.spec.ts", "src/**/e2e/**"]
 }
